# stable-retro

./: .gitignore  .xxx  CMakeLists.txt  README.md  setup.py
cores/: 3ds.json  dolphin.json  dreamcast.json  ppsspp.json  ps1.json  ps2.json  saturn.json
cores/ps1/frontend/: libretro.c
cores/ps2/: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Makefile.common  README.md  mtgs.diff  pushdesc.diff
cores/ps2/common/: Align.h  AlignedMalloc.cpp  AlignedMalloc.d  AlignedMalloc.h  CMakeLists.txt  Console.cpp  Console.d  Console.h  FPControl.h  FastJmp.cpp  FastJmp.d  FileSystem.cpp  FileSystem.d  FileSystem.h  General.h  HostSys.cpp  HostSys.d  MD5Digest.cpp  MD5Digest.d  MathUtils.h  MemorySettingsInterface.cpp  MemorySettingsInterface.d  MemorySettingsInterface.h  Path.h  Pcsx2Defs.h  Pcsx2Types.h  RedtapeWilCom.h  RedtapeWindows.h  Semaphore.cpp  Semaphore.d  SettingsInterface.h  SettingsWrapper.cpp  SettingsWrapper.d  SingleRegisterTypes.h  StringUtil.cpp  StringUtil.d  StringUtil.h  TextureDecompress.cpp  TextureDecompress.d  TextureDecompress.h  (+12 more)
cores/ps2/libretro/: CMakeLists.txt  DEV9.cpp  DEV9.d  USB.cpp  USB.d  libretro_core_options.h  libretro_core_options_intl.h  main.cpp  main.d  patches.cpp  patches.d
cores/ps2/pcsx2/: CMakeLists.txt  COP0.cpp  COP0.d  COP0.h  COP2.cpp  COP2.d  Cache.cpp  Cache.d  Cache.h  Common.h  Config.h  Counters.cpp  Counters.d  Counters.h  Dmac.cpp  Dmac.d  Dmac.h  Elfheader.cpp  Elfheader.d  Elfheader.h  FPU.cpp  FPU.d  FW.cpp  FW.d  FW.h  FiFo.cpp  FiFo.d  GS.cpp  GS.d  GS.h  GameDatabase.cpp  GameDatabase.h  Gif.cpp  Gif.d  Gif.h  Gif_Unit.cpp  Gif_Unit.d  Gif_Unit.h  Host.h  Hw.cpp  (+99 more)
cores/ps2/pcsx2/GS/: GS.h  (+31 more)
main/: .buildinfo  404.html  index.html  searchindex.js
main/README/: index.html
main/_modules/: index.html
main/_static/: documentation_options.js
main/developing/: index.html
main/genindex/: index.html
main/getting_started/: index.html
main/integration/: index.html
main/python/: index.html
main/release_notes/: index.html
main/search/: index.html
regress/: runtest
retro/cores/: Virtua Fighter (USA).bkr  Virtua Fighter (USA).smpc
src/: emulator.cpp  emulator.h  libretro.h
src/ui/: Makefile
(+418 files in other folders)
